--- a/components/Section4/Section4.module.css
+++ b/components/Section4/Section4.module.css
@@ -4,9 +4,6 @@
     display: flex;
     padding: 50px 60px;
     gap: 20px;
-    background: #043873;
-    background-image: url(/images/bg.png)
-    
     }
     .one{
         /* border: 1px solid black; */
@@ -14,7 +11,6 @@
         width: 50%;
         padding: 20px;
         align-content: center;
-        color: whitesmoke;
     
     }
     .head1{
@@ -45,7 +41,7 @@
     }
     .box{
         padding: 10px;
-        background-color: aqua;
+        background-color: rgb(231, 219, 219);
         height: 100%;
         width: 100%;
         justify-content: center;
